test/llvm/macros/complex-macro-call-with-args.good
complex-macro-call-with-args.chpl:1: error: Could not find C function for ComplexFnLikeArgs;  perhaps it is missing or is a macro?
