test/llvm/macros/complex-macro-call-with-args.chpl
extern proc ComplexFnLikeArgs(arg);

proc main() {
  ComplexFnLikeArgs(1);
}
